[gd_scene load_steps=13 format=3 uid="uid://cr4wqv56r4hf3"]

[ext_resource type="FontFile" uid="uid://dqdbst8avnfuo" path="res://Assets/fonts/Lady Radical.ttf" id="1_8vtnt"]
[ext_resource type="Script" path="res://Resources/MasteryUnlockPopup.gd" id="1_52o07"]
[ext_resource type="Texture2D" uid="uid://cg31xcdc0vrid" path="res://Assets/sprites/Masteries1.png" id="2_mq1ll"]
[ext_resource type="Script" path="res://Resources/Icon.gd" id="3_cu1de"]
[ext_resource type="Script" path="res://Scenes/QuestSelect/TooltipGrabber.gd" id="5_a0q88"]

[sub_resource type="LabelSettings" id="LabelSettings_3ik3a"]
font = ExtResource("1_8vtnt")
font_color = Color(0.0627451, 0.87451, 0.501961, 1)

[sub_resource type="LabelSettings" id="LabelSettings_gitm8"]
line_spacing = 0.0
font_size = 8

[sub_resource type="AtlasTexture" id="AtlasTexture_vdn5u"]
atlas = ExtResource("2_mq1ll")
region = Rect2(48, 48, 16, 16)
script = ExtResource("3_cu1de")
name = "mastery1/novice"

[sub_resource type="Animation" id="Animation_2bkcx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BackgroundAnchor:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ContentsAnchor:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ContentsAnchor:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ContentsAnchor:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_4ng0r"]
resource_name = "popup_hide"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BackgroundAnchor:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ContentsAnchor:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.001),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_mpr8n"]
resource_name = "popup_show"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BackgroundAnchor:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(1, 1e-05), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ContentsAnchor:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 8), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ContentsAnchor:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ContentsAnchor:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x74cr"]
_data = {
"RESET": SubResource("Animation_2bkcx"),
"popup_hide": SubResource("Animation_4ng0r"),
"popup_show": SubResource("Animation_mpr8n")
}

[node name="MasteryUnlockPopup" type="CanvasLayer"]
layer = 20
visible = false
offset = Vector2(640, 360)
scale = Vector2(4, 4)
transform = Transform2D(4, 0, 0, 4, 640, 360)
script = ExtResource("1_52o07")

[node name="MouseBlocker" type="ColorRect" parent="."]
anchors_preset = -1
anchor_left = -0.125
anchor_top = -0.125
anchor_right = 0.125
anchor_bottom = 0.125
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="BackgroundAnchor" type="Node2D" parent="."]
unique_name_in_owner = true
scale = Vector2(1, 1e-05)

[node name="MarginContainer" type="MarginContainer" parent="BackgroundAnchor"]
custom_minimum_size = Vector2(320, 80)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -40.0
offset_right = 160.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="BackgroundAnchor/MarginContainer"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="ContentsAnchor" type="Node2D" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)

[node name="MarginContainer" type="MarginContainer" parent="ContentsAnchor"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -40.0
offset_right = 160.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 7

[node name="VBoxContainer" type="VBoxContainer" parent="ContentsAnchor/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label2" type="Label" parent="ContentsAnchor/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
text = "mastery achieved!"
label_settings = SubResource("LabelSettings_3ik3a")

[node name="Control" type="Control" parent="ContentsAnchor/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2

[node name="Label" type="Label" parent="ContentsAnchor/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "MASTERY_AVAILABLE"
label_settings = SubResource("LabelSettings_gitm8")
horizontal_alignment = 1
autowrap_mode = 3

[node name="Control2" type="Control" parent="ContentsAnchor/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ContentsAnchor/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10

[node name="ColorRect" type="ColorRect" parent="ContentsAnchor/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
color = Color(0.545098, 0.545098, 0.545098, 1)

[node name="MarginContainer" type="MarginContainer" parent="ContentsAnchor/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="ColorRect" type="ColorRect" parent="ContentsAnchor/MarginContainer/VBoxContainer/MarginContainer/MarginContainer"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="ContentsAnchor/MarginContainer/VBoxContainer/MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="MasteryIcon" type="TextureRect" parent="ContentsAnchor/MarginContainer/VBoxContainer/MarginContainer/MarginContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = SubResource("AtlasTexture_vdn5u")

[node name="TooltipGrabber" type="Node" parent="ContentsAnchor/MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
script = ExtResource("5_a0q88")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_x74cr")
}
